--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "clean": "rimraf .next",
+    "check-env": "node -r dotenv/config -e \"if(!process.env.GEMINI_API_KEY) console.warn('Warning: GEMINI_API_KEY is not set')\"",
+    "prebuild": "npm run clean && npm run check-env",
+    "prod": "npm run build && npm start"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
@@ -27,6 +31,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
+    "rimraf": "^6.1.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
