--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "lru-cache": "^11.2.4",
     "lucide-react": "^0.561.0",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.1",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
